syntax = "proto3";

message Chapter {
  optional uint64 titleId = 1;
  optional uint64 chapterId = 2;
  optional string name = 3;
  optional string subTitle = 4;
  optional string thumbnailUrl = 5;
  optional uint64 startTimeStamp = 6;
  optional uint64 endTimeStamp = 7;
  optional bool alreadyViewed = 8;
  optional bool isVerticalOnly = 9;
}

message TransitionAction {
  optional int64 method = 1;
  optional string url = 2;
}

message Banner {
  optional string imageUrl = 1;
  optional TransitionAction action = 2;
  optional uint64 id = 3;
}

message Sns {
  optional string body = 1;
  optional string url = 2;
}

message Title {
  optional uint64 titleId = 1;
  optional string name = 2;
  optional string author = 3;
  optional string portraitImageUrl = 4;
  optional string landscapeImageUrl = 5;
  optional uint64 viewCount = 6;
  optional int64 language = 7;
}

message TitleDetailView {
  optional Title title = 1;
  optional string titleImageUrl = 2;
  optional string overview = 3;
  optional string backgroundImageUrl = 4;
  optional uint64 nextTimeStamp = 5;
  optional int64 updateTiming = 6;
  optional string viewingPeriodDescription = 7;
  optional string nonAppearanceInfo = 8;
  repeated Chapter firstChapterList = 9;
  repeated Chapter lastChapterList = 10;
  repeated Banner banners = 11;
  repeated Title recommendedTitleList = 12;
  optional Sns sns = 13;
  optional bool isSimulReleased = 14;
  optional bool isSubscribed = 15;
  optional int64 rating = 16;
  optional bool chaptersDescending = 17;
  optional uint64 numberOfViews = 18;
}

message Response {
  optional SuccessResult success = 1;
}

message SuccessResult {
  optional TitleDetailView titleDetailView = 8;
}